--- a/product_details.html
+++ b/product_details.html
@@ -24,7 +24,7 @@
                             <li class="nav-item"><a href="account.html">Account</a></li>
                         </ul>
                     </nav>
-                    <a href="cart.html"><img class="cart" src="cart.jpg"></a>
+                    <a href="cart.html">Cart</a>
                     <div class="toggle"><i class="fa fa-bars"></i></div>
                 </div>
             </div>
