--- a/product_details.html
+++ b/product_details.html
@@ -74,7 +74,7 @@
         <div class="small-container">
             <div class="child child-2">
                 <h2>Related Products</h2>
-                <p><a href="./products.html">View More</a></p>
+                <p><a href="./product.html">View More</a></p>
             </div>
         </div>
         <div class="small-container">
