--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="main-qimg-ed73f13c5089960dc564bb7a464de6e5-lq.jpg">
     </section>
     <div class="headerimg">
-        <h1>Wlcome To Fashion_Git</h1>
+        <h1>Welcome To Fashion_Git</h1>
         <h3>Experience New Form of shoppong</h3>
         <a href="product.html" class="btn">Explore Now &#8594;</a>
     </div>
