--- a/index.html
+++ b/index.html
@@ -160,6 +160,6 @@
         </div>
     </div>
 
-    <script src="./src/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
